# Noxis

./: .gitignore  CMakeLists.txt  config.json
cmake/: base.cmake  compilers.cmake  warnings.cmake
cmake/modules/: FindLuaJIT.cmake
include/: noxis.h  utils.h
include/core/: callbacks.h  debug.h  game.h  init.h  quit.h  setup.h
include/core/ecs/: setup.h
include/core/scene/: manager.h
include/graphics/: sprite.h
include/noxis/: config.h  configs.h  core.h  log.h  sprite.h
src/: main.c  noxis.c  utils.c
src/core/: callbacks.c  debug.c  game.c  init.c  quit.c  setup.c
src/core/ecs/: setup.c
src/core/scene/: manager.c
src/graphics/: sprite.c
src/noxis/: config.c  configs.c  core.c  log.c  sprite.c
